# Deteccion-Frames-Sin-Peces

./: .gitignore  Entrenamiento.ipynb  Preprocesamiento.ipynb  README.md  pyproject.toml  requirements.txt
notebooks/: Entrenamiento.ipynb  Preprocesamiento.ipynb
