[project]
name = "Deteccion-Frames-Sin-Peces"
version = "1.0.0"
description = "Clasificador binario de frames de salmones basado en MobileNetV3."
requires-python = ">=3.12"
dependencies = [
    "torch==2.4.0",
    "torchvision==0.19.0",
    "numpy==2.1.1",
    "pillow==10.4.0",
    "matplotlib==3.9.2",
    "seaborn==0.13.2",
    "scikit-learn==1.5.2",
    "tqdm==4.66.5",
    "jupyterlab==4.2.5"
]

[tool.uv]
dev-dependencies = []
